# turnstile-camoufox-sdk

./: .gitignore  INTEGRACION.md  LICENSE  MANIFEST.in  README.md  pyproject.toml
.github/workflows/: ci.yml  publish-pypi.yml
examples/: minimal.py
site/: next.config.ts
site/src/app/: globals.css  layout.tsx  page.tsx
src/camoufox_turnstile/: __init__.py  assist.py  browser.py  solve.py  vision.py  weights.py
tests/: test_weights.py
