[build-system]
requires = ["setuptools>=61", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "camoufox-turnstile"
version = "0.1.0"
description = "SDK Python: Camoufox + asistencia Turnstile (DOM o YOLO con polling) para Playwright async."
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
requires-python = ">=3.10"
authors = [{ name = "Builker Labs" }]
keywords = ["turnstile", "camoufox", "playwright", "cloudflare", "yolo"]
classifiers = [
  "Development Status :: 4 - Beta",
  "Intended Audience :: Developers",
  "Programming Language :: Python :: 3",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
  "Programming Language :: Python :: 3.12",
  "Topic :: Internet :: WWW/HTTP :: Browsers",
  "Typing :: Typed",
]
dependencies = [
  "camoufox>=0.4.11,<0.5",
  "playwright>=1.40.0",
  "platformdirs>=4.0.0",
  "numpy>=1.24.0",
]

[project.optional-dependencies]
yolo = [
  "ultralytics>=8.0.0,<9",
  "opencv-python-headless>=4.8.0",
]
s3 = ["boto3>=1.28.0"]
dev = ["pytest>=7.4.0", "pytest-asyncio>=0.23.0", "build>=1.0.0"]

[project.urls]
Homepage = "https://github.com/builker-col/turnstile-camoufox-sdk"
Repository = "https://github.com/builker-col/turnstile-camoufox-sdk"
Issues = "https://github.com/builker-col/turnstile-camoufox-sdk/issues"

[tool.setuptools.packages.find]
where = ["src"]

[tool.setuptools.package-data]
camoufox_turnstile = ["py.typed"]

[tool.pytest.ini_options]
asyncio_mode = "auto"
testpaths = ["tests"]
